--- a/style.css
+++ b/style.css
@@ -6,35 +6,70 @@
       height: 100vh;
       margin: 0;
 } */
+#icon {
+      margin-left: 5px;
+}
+
+#temp {
+      font-size: 4rem;
+}
+
+#temp-unit {
+      font-size: 2rem;
+}
+
+#text {
+      margin-left: 30px;
+      text-decoration: underline;
+      font-size: 1.3rem;
+      text-align: center;
+      font-weight: 600;
+}
+
+#feels-like {
+      margin-top: 3px;
+      color: #554c4c;
+      font-size: 0.9rem;
+}
+
+.padd {
+      padding: 65px;
+}
+
+.lf-padd {
+      padding: 0px 20px 0px 20px;
+}
 
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Alumni+Sans+Collegiate+One:ital@1&family=Lilita+One&family=Merriweather:ital,wght@1,700&family=Pixelify+Sans&family=Reem+Kufi+Fun&family=Young+Serif&display=swap');
-.head{
+
+.head {
       font-family: 'Young+Serif&display=swap';
 }
 
-.main{
+.main {
       flex: flex;
       text-align: center;
-      justify-content: center; 
+      justify-content: center;
       min-height: 100vh;
       background: url(accets/bg\ cloud.jpg);
       background-position: center;
       background-size: cover;
 }
+
 /* .container{
       background: rgb(51, 96, 185);
       backdrop-filter: blur(60px);
       border: 3px solid rgba(43, 51, 175, 0.601) ;
       box-shadow: 10px 10px 5px 10px #3b78f3;
 } */
- 
+
 
 .weather-container {
       text-align: center;
 }
 
 
-.search-box  i{
+.search-box i {
       margin-top: 10px;
       font-size: 28px;
       color: rgb(49, 50, 52);
@@ -43,18 +78,19 @@
 }
 
 .search-box input {
-      border: 2px solid rgba(155, 139, 139, 0.654);  
+      border: 2px solid rgba(155, 139, 139, 0.654);
       padding: 0 48px 0 42px;
       text-transform: capitalize;
       font-weight: 500;
       color: aliceblue;
-      
+
 }
 
-.search-box input::placeholder{
+.search-box input::placeholder {
       color: aliceblue;
       text-transform: capitalize;
 }
+
 .search-box button {
       position: absolute;
       right: 0;
@@ -74,7 +110,7 @@
       margin: 0 auto;
       justify-content: center;
 }
-  
+
 .weathercontainer {
       margin-top: 10%;
       width: 50%;
@@ -86,24 +122,23 @@
       border: 3px solid rgba(43, 51, 175, 0.601);
       box-shadow: 10px 10px 5px 10px #3b78f3;
 }
-  
+
 .weather-box img {
-      margin: auto;
       text-align: center;
       width: 30%;
-     
-  
+
+
 }
 
 .waether-deatali .homudity,
-.waether-deatali .wind{
-     display: flex;
+.waether-deatali .wind {
+      display: flex;
       align-items: center;
       width: 50%;
 
 }
 
-.waether-deatali i{
+.waether-deatali i {
       font-size: 50px;
       margin-right: 10px;
 }
