--- a/style1.css
+++ b/style1.css
@@ -616,6 +616,18 @@ video {
   justify-content: center;
 }
 
+.justify-evenly {
+  justify-content: space-evenly;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-6 {
+  gap: 1.5rem;
+}
+
 .rounded-xl {
   border-radius: 0.75rem;
 }
