--- a/style.css
+++ b/style.css
@@ -1,11 +1,4 @@
-/* body {
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-} */
+/* main data css section start*/
 #icon {
       margin-left: 5px;
 }
@@ -39,66 +32,6 @@
 .lf-padd {
       padding: 0px 20px 0px 20px;
 }
-
-@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Alumni+Sans+Collegiate+One:ital@1&family=Lilita+One&family=Merriweather:ital,wght@1,700&family=Pixelify+Sans&family=Reem+Kufi+Fun&family=Young+Serif&display=swap');
-
-.head {
-      font-family: 'Young+Serif&display=swap';
-}
-
-.main {
-      flex: flex;
-      text-align: center;
-      justify-content: center;
-      min-height: 100vh;
-      background: url(accets/bg\ cloud.jpg);
-      background-position: center;
-      background-size: cover;
-}
-
-
-.weather-container {
-      text-align: center;
-}
-
-
-.search-box i {
-      margin-top: 10px;
-      font-size: 28px;
-      color: rgb(49, 50, 52);
-      cursor: pointer;
-      margin-left: 10px;
-}
-
-.search-box input {
-      border: 2px solid rgba(155, 139, 139, 0.654);
-      padding: 0 48px 0 42px;
-      text-transform: capitalize;
-      font-weight: 500;
-      color: aliceblue;
-
-}
-
-.search-box input::placeholder {
-      color: aliceblue;
-      text-transform: capitalize;
-}
-
-.search-box button {
-      position: absolute;
-      right: 0;
-      width: 40px;
-      height: 100%;
-      background: transparent;
-      border: none;
-      outline: none;
-      font-size: 28px;
-      color: aliceblue;
-      cursor: pointer;
-      padding: 0 40px 0 5px;
-}
-
-
 #weather-deatail {
       margin: 0 auto;
       justify-content: center;
@@ -142,7 +75,70 @@
       color: crimson;
 }
 
+/* main data css section end*/
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Alumni+Sans+Collegiate+One:ital@1&family=Lilita+One&family=Merriweather:ital,wght@1,700&family=Pixelify+Sans&family=Reem+Kufi+Fun&family=Young+Serif&display=swap');
 
+.head {
+      font-family: 'Young+Serif&display=swap';
+}
+
+/* main container section css  start*/
+.main {
+      flex: flex;
+      text-align: center;
+      justify-content: center;
+      min-height: 100vh;
+      background: url(accets/bg\ cloud.jpg);
+      background-position: center;
+      background-size: cover;
+}
+
+
+.weather-container {
+      text-align: center;
+}
+
+
+.search-box i {
+      margin-top: 10px;
+      font-size: 28px;
+      color: rgb(49, 50, 52);
+      cursor: pointer;
+      margin-left: 10px;
+}
+
+.search-box input {
+      border: 2px solid rgba(155, 139, 139, 0.654);
+      padding: 0 48px 0 42px;
+      text-transform: capitalize;
+      font-weight: 500;
+      color: aliceblue;
+      
+}
+
+.search-box input::placeholder {
+      color: aliceblue;
+      text-transform: capitalize;
+}
+
+.search-box button {
+      position: absolute;
+      right: 0;
+      width: 40px;
+      height: 100%;
+      background: transparent;
+      border: none;
+      outline: none;
+      font-size: 28px;
+      color: aliceblue;
+      cursor: pointer;
+      padding: 0 40px 0 5px;
+}
+/* main container section css  end*/
+
+
+
+/* footer section css start  */
 
 .footer {
       padding: 70px 0;
@@ -171,13 +167,14 @@
 }
 
 footer {
+      width: 100%;
       background-color: #073ba4af;
       border-top: 1px solid #0c21c4;
       font-size: 17px;
       padding: 15px 5px;
       color: #4997ea;
       text-align: center;
-      /* margin-top: 40%; */
+     
 }
 
 footer a {
@@ -233,3 +230,5 @@ footer a {
       font-weight: 500;
      
 }
+
+/* footer section css end  */
